<resources>
    <!-- XML Display Strings -->
    <string name="app_name">Doorhub</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_media">Media</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="register">Register</string>
    <string name="register_title">Register Your Account</string>
    <string name="login">Login</string>
    <string name="new_user">New User ?</string>
    <string name="test">Testing Test!!!</string>
    <string name="random_description">Random description</string>
    <string name="unlock">UNLOCK</string>
    <string name="more_videos">more</string>
    <string name="see_saved_videos">To See Saved Videos</string>
    <string name="smart_door_system_name">Smart Front Door</string>
    <string name="device_name">Device Name</string>
    <string name="device_description">Device Description</string>
    <string name="battery_device_name">Battery</string>
    <string name="camera_device_name">Camera</string>
    <string name="display_screen_device_name">Display Screen</string>
    <string name="doorlock_device_name">Door Lock</string>
    <string name="doorbell_device_name">Doorbell</string>
    <string name="motion_sensor_device_name">Motion Sensor</string>
    <string name="system_barcode_name">System Barcode</string>
    <string name="peek">peek</string>

    <!-- Programmatically selected Display Strings -->
    <string name="registration_message">Welcome to Doorhub!</string>
    <string name="login_message1">Welcome back!</string>
    <string name="login_message2">#Vegan</string>
    <string name="login_message3">Now\'s the time to go to the washroom</string>
    <string name="login_message4">Here to make your life easier!</string>
    <string name="login_message5">Jarvis, here to help you!</string>
    <string name="login_message6">Error 404! Kidding, everything\'s fine!</string>
    <string name="login_message7">Don\'t worry, everything is fine… I swear.</string>
    <string name="login_message8">Don\'t forget your mask!</string>
    <string name="login_message9">Don\'t forget to wash your hands!</string>
    <string name="smart_door_status_summary">Fully operational</string>

    <!-- Programmatically used strings -->
    <string name="url">http://34.117.160.50/</string>
    <string name="notifications_title">Notifications</string>
    <string name="firstname_hint">First Name</string>
    <string name="lastname_hint">Last Name</string>
    <string name="remember_me">Remember Me</string>
    <string name="door_closed">Door Closed</string>
    <string name="door_locked">Door Locked</string>
    <string name="battery_level">Battery Level</string>
    <string name="connected_to_wifi">Connected to Wifi</string>
    <string name="camera_stream">Camera Stream</string>
    <string name="camera_ready">Camera Ready</string>
    <string name="sd_card_ready">SD Card Ready</string>
    <string name="mediaTitle">Account Media</string>
    <string name="downloadVideo">Download</string>
    <string name="videoName">"Video Name "</string>
    <string name="open_stream">Open Stream</string>
    <string name="stream">Stream</string>
    <string name="help_page">Help Page</string>

</resources>
