<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/general_padding"
    android:layout_marginRight="@dimen/general_padding"
    android:layout_marginTop="@dimen/general_padding"
    android:background="?android:attr/selectableItemBackground"
    android:gravity="center_vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/general_padding"
            android:paddingLeft="@dimen/general_padding"
            android:paddingEnd="@dimen/general_padding"
            android:paddingRight="@dimen/general_padding">

            <TextView
                android:id="@+id/recentNotificationsWActionsTitleLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/title_notifications"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="@dimen/card_title_size" />

            <TextView
                android:id="@+id/recentNotificationsWActionsDescriptionLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/random_description"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textSize="@dimen/card_subtitle_size" />

            <TextView
                android:id="@+id/recentNotificationsWActionsDateLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingBottom="13dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textSize="@dimen/card_body_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="13dp"
                android:gravity="center">

                <Button
                    android:id="@+id/recentNotificationsWActionsPeekButton"
                    android:layout_width="155dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginEnd="@dimen/general_padding"
                    android:layout_marginRight="@dimen/general_padding"
                    android:background="@color/colorPrimary"
                    android:text="@string/peek" />

                <Button
                    android:id="@+id/recentNotificationsWActionsDoorButton"
                    android:layout_width="155dp"
                    android:layout_height="@dimen/button_height"
                    android:background="@color/colorAccent"
                    android:text="@string/unlock" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>