<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:scrollbarSize="@dimen/scrollbar_size">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/activity_card_corner_radius">

        <LinearLayout
            android:id="@+id/systemStatusLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingLeft="@dimen/card_horizontal_padding"
            android:paddingTop="@dimen/card_vertical_padding"
            android:paddingRight="@dimen/card_horizontal_padding"
            android:paddingBottom="@dimen/card_vertical_padding">

            <TextView
                android:id="@+id/deviceStatusTitleLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/card_vertical_padding"
                android:text="@string/smart_door_system_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="@dimen/card_title_size" />

            <TextView
                android:id="@+id/deviceStatusDescriptionLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/card_vertical_padding"
                android:text="@string/smart_door_status_summary"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textSize="@dimen/card_subtitle_size" />

            <TextView
                android:id="@+id/deviceStatusBarcodeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_vertical_padding"
                android:layout_marginBottom="@dimen/card_vertical_padding"
                android:text="@string/system_barcode_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textSize="@dimen/card_subtitle_size" />

            <ImageView
                android:id="@+id/deviceStatusBarcodeImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:adjustViewBounds="true"
                android:contentDescription="@string/system_barcode_name"
                tools:srcCompat="@drawable/Template_System_Barcode" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>